# demos

./: .gitignore
shadertoy/: cookiecutter.json  generate_zip.sh
shadertoy/{{ cookiecutter.project_slug }}/: CMakeLists.txt
shadertoy/{{ cookiecutter.project_slug }}/src/: glad.c  main.cpp  {{ cookiecutter.project_slug }}_frag.glsl
spinning_cube/: CMakeLists.txt
spinning_cube/include/: fix_render_on_mac.h
spinning_cube/include/glad/: glad.h
spinning_cube/src/: main.cpp  spinning_cube_frag.glsl
